--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,35 @@
 <html>
   <head>
     <title> Darjaaaaa </title>
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
+    {% include 'navbar.html'%}
+    
  <h1>Hello Welcome to our application and happy watching</h1>
 
-    <img src= "https://costlyabandonedlisteners.nivaas76.repl.co/static/nav.png" height= "280" >
 
-    <button>Watch Together </button>
+    <img src= "https://costlyabandonedlisteners.nivaas76.repl.co/static/nav.png" height= "800px"; width="800px">
+
+   <h1 style="font-family: sans-serif; text-align:center"> About us
+    </h1>
+
+  <h4 style="font-family: sans-serif; text-align:center"> Welcome to our innovative web application! With our platform, you can enjoy the ultimate movie night experience from the comfort of your own home. We offer seamless access to a wide range of OTT platform movies while simultaneously engaging in a thrilling video call with your friends. Gone are the days of watching movies alone; now, you can laugh, gasp, and share reactions with your loved ones in real-time, no matter the distance. Our web app brings people together through a unique combination of entertainment and connection. So, grab your popcorn, invite your friends, and let the movie nights begin.
+  </h4>
     
+     <div>
+        {% for job in jobs %}
+            {% include 'jobitem.html' %}
+        {% endfor %}
+    </div>
+
+    
+    <button>Watch Together </button>
+
+
+    {% include 'footer.html' %}
   </body>
 </html>
