--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,11 @@
 <nav class="navbar bg-body-tertiary shadow-sm fixed-top bg-white">
-  <div class="container">
+<div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="static/logo.svg" alt="Bootstrap" width="30" height="24">
+      <img src="/static/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      Nivaas careers
     </a>
   </div>
 </nav>
-<div style="height:56px"></div>
+<div style="height:68px"></div>
+
+
