--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <body>
     {% include 'navbar.html'%}
     
- <h1>Hello Welcome to our application and happy watching</h1>
+ <h1 style=text-align:center;font-family: sans-serif;>Happy Watching</h1>
 
 
     <img src= "https://costlyabandonedlisteners.nivaas76.repl.co/static/nav.png" height= "800px"; width="800px">
@@ -27,8 +27,13 @@
         {% endfor %}
     </div>
 
+
+
     
-    <button>Watch Together </button>
+
+    
+<button style="display: block; margin: 0 auto;" type="button" class="btn btn-outline-primary">Reach Us</button>
+
 
 
     {% include 'footer.html' %}
